# fuelkenya

./: .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
api/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  vercel.json
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_initial.py
api/app/: __init__.py  db.py  main.py  schemas.py
api/app/api/v1/: endpoints.py
api/app/core/: cache.py  config.py  rate_limit.py
api/data/epra-cycles/: 2026-07-15_to_2026-08-14.csv
docs/: package-lock.json  package.json  theme.config.tsx  tsconfig.json  vercel.json
docs/pages/: _app.tsx  _meta.json  authentication.mdx  index.mdx  quickstart.mdx  rate-limiting.mdx
docs/pages/endpoints/: _meta.json  health.mdx  index.mdx  ingest-csv.mdx  prices-latest.mdx  prices.mdx  towns.mdx
docs/pages/examples/: _meta.json  curl.mdx  (+2 more)
docs/public/: robots.txt  sitemap.xml
web/: .gitignore  .npmrc  README.md  package.json  tailwind.config.ts  tsconfig.json  vercel.json
web/app/: globals.css  layout.tsx  loading.tsx  opengraph-image.tsx  page.tsx  robots.txt  sitemap.ts
web/components/: AnimatedTownSection.tsx  FuelEstimator.tsx  HeroVisual.tsx  InfoCards.tsx  PriceCard.tsx  RegionVariance.tsx  ReviewDayBanner.tsx  SearchBar.tsx  ThemeToggle.tsx  TrendChart.tsx  UpdateCountdown.tsx
web/lib/: api.ts  useEpraCycle.ts
web/public/: llms.txt
(+6 files in other folders)
