[project]
name = "fuelkenya-api"
version = "0.1.0"
description = "FastAPI backend for FuelKenya"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.23,<1.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.6,<1.0",
  "pydantic-settings>=2.0,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "asyncpg>=0.27,<1.0",
  "alembic>=1.11,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<0.26",
  "httpx>=0.25,<0.30",
  "black>=24.0,<25.0",
  "ruff>=0.0,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.mypy]
mypy_path = "." 